--- a/reciever/Dockerfile
+++ b/reciever/Dockerfile
@@ -3,4 +3,5 @@ WORKDIR /app
 COPY package.json package-lock.json ./
 RUN npm install
 COPY . .
-CMD ["node", "server.js"]
+
+ENTRYPOINT ["sh", "-c", "npm run migrate && npm start"]
